--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,9 @@
 	<name>JWT-Spring-Security</name>
 	<description>Authentication and Authorization Microservice for elearning Project</description>
 	<properties>
-		<java.version>11</java.version>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
 	</properties>
 	<dependencies>
 		<dependency>
