--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,8 +8,8 @@ spring:
   h2:
     console:
       enabled: true
-server:
-  port: 8089
+# server:
+#   port: 8089
 java:
   runtime:
     version: 11
